--- a/init/docker-compose.yml
+++ b/init/docker-compose.yml
@@ -1,25 +1,25 @@
 version: "2"
 services:
-  tmp-nginx:
+  tmpnginx:
     image: nginx
     restart: always
     ports:
-      - "8080:80"
+      - "18030:80"
     networks:
-      - core-network
+      - tmpnetwork
 
-  tmp-mysql:
+  tmpmysql:
     image: mysql
     restart: always
     ports:
-      - "3306:3306"
+      - "13306:3306"
     environment:
       MYSQL_USER: root
       MYSQL_PASSWORD: 123456
       MYSQL_ROOT_PASSWORD: 123456
     networks:
-      - core-network
+      - tmpnetwork
 
 networks:
-  core-network:
+  tmpnetwork:
     driver: bridge
