--- a/init/docker-compose.yml
+++ b/init/docker-compose.yml
@@ -1,7 +1,8 @@
-version: "2"
+version: "3"
 services:
   tmpnginx:
     image: nginx
+    container_name: tmpnginx
     restart: always
     ports:
       - "18030:80"
@@ -10,6 +11,7 @@ services:
 
   tmpmysql:
     image: mysql
+    container_name: tmpmysql
     restart: always
     ports:
       - "13306:3306"
