--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,24 @@ services:
       MYSQL_PASSWORD: 123456
       MYSQL_ROOT_PASSWORD: 123456
 
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    restart: always
+    depends_on:
+      - mysql
+      - nginx
+    networks:
+      - core-network
+    ports:
+      - "20080:80"
+    environment:
+      PMA_HOST: mysql
+      MYSQL_PORT: 3306
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 123456
+      MYSQL_ROOT_PASSWORD: 123456
+
   gogs:
     image: gogs/gogs
     container_name: gogs
@@ -43,6 +61,15 @@ services:
       - "10080:3000"
     volumes:
       - ~/gogs:/data
+
+  redis:
+    image: redis
+    container_name: redis
+    restart: always
+    networks:
+      - core-network
+    ports:
+      - "6379:6379"
 
 networks:
   core-network:
