--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,44 +5,26 @@ services:
     container_name: nginx
     restart: always
     networks:
-      - core-network
+      - default
     ports:
       - "80:80"
     volumes:
-      - ~/nginx/html:/usr/share/nginx/html
-      - ~/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ~/nginx/conf.d:/etc/nginx/conf.d
+      - /mnt/nginx/html:/usr/share/nginx/html
+      - /mnt/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - /mnt/nginx/conf.d:/etc/nginx/conf.d
 
   mysql:
     image: mysql
     container_name: mysql
     restart: always
     networks:
-      - core-network
+      - default
     ports:
-      - "3306:3306"
+      - "13306:3306"
     volumes:
-      - ~/mysql/my.cnf:/etc/mysql/my.cnf:ro
-      - ~/mysql/data:/var/lib/mysql
+      - /mnt/mysql/my.cnf:/etc/mysql/my.cnf:ro
+      - /mnt/mysql/data:/var/lib/mysql
     environment:
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 123456
-      MYSQL_ROOT_PASSWORD: 123456
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
-    restart: always
-    depends_on:
-      - mysql
-      - nginx
-    networks:
-      - core-network
-    ports:
-      - "20080:80"
-    environment:
-      PMA_HOST: mysql
-      MYSQL_PORT: 3306
       MYSQL_USER: root
       MYSQL_PASSWORD: 123456
       MYSQL_ROOT_PASSWORD: 123456
@@ -55,22 +37,18 @@ services:
       - mysql
       - nginx
     networks:
-      - core-network
+      - default
     ports:
       - "10022:22"
       - "10080:3000"
     volumes:
-      - ~/gogs:/data
+      - /mnt/gogs:/data
 
   redis:
     image: redis
     container_name: redis
     restart: always
     networks:
-      - core-network
+      - default
     ports:
       - "6379:6379"
-
-networks:
-  core-network:
-    driver: bridge
