--- a/app.ini
+++ b/app.ini
@@ -2,9 +2,9 @@
 ## PATH /mnt/gogs/gogs/conf/app.ini
 
 [server]
-DOMAIN           = git.webwebsite.com
+DOMAIN           = git.website.com
 HTTP_PORT        = 3000
-EXTERNAL_URL     = http://git.webwebsite.com/
+EXTERNAL_URL     = http://git.website.com/
 DISABLE_SSH      = false
 SSH_PORT         = 22
 START_SSH_SERVER = false
