--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,38 @@
-version: "3"
+version: "3.8"
 services:
-  nginx:
-    image: nginx
-    container_name: nginx
+  frps:
+    build:
+      context: ./frp/frps/${FRPS_ARCH}
+      args:
+        - FRP_VERSION=${FRP_VERSION}
+        - ZP_MAINTAINER=${ZP_MAINTAINER}
+    container_name: frps
+    privileged: true
     restart: always
-    networks:
-      - default
-    ports:
-      - "80:80"
     volumes:
-      - /mnt/nginx/html:/usr/share/nginx/html
-      - /mnt/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /mnt/nginx/conf.d:/etc/nginx/conf.d
-
-  mysql:
-    image: mysql
-    container_name: mysql
-    restart: always
+      - ${FRPS_INI_PATH}:/etc/frp/frps.ini
     networks:
-      - default
-    ports:
-      - "13306:3306"
+      backend:
+        ipv4_address: ${FRPS_IP}
+
+  frpc:
+    build:
+      context: ./frp/frpc/${FRPC_ARCH}
+      args:
+        - FRP_VERSION=${FRP_VERSION}
+        - ZP_MAINTAINER=${ZP_MAINTAINER}
+    container_name: frpc
+    privileged: true
+    restart: always
     volumes:
-      - /mnt/mysql/conf.d:/etc/mysql/conf.d:ro
-      - /mnt/mysql/my.cnf:/etc/mysql/my.cnf:ro
-      - /mnt/mysql/data:/var/lib/mysql
-    environment:
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 123456
-      MYSQL_ROOT_PASSWORD: 123456
-
-  gogs:
-    image: gogs/gogs
-    container_name: gogs
-    restart: always
-    depends_on:
-      - mysql
-      - nginx
+      - ${FRPC_INI_PATH}:/etc/frp/frpc.ini
     networks:
-      - default
-    ports:
-      - "10022:22"
-      - "10080:3000"
-    volumes:
-      - /mnt/gogs:/data
+      backend:
+        ipv4_address: ${FRPC_IP}
 
-  redis:
-    image: redis
-    container_name: redis
-    restart: always
-    networks:
-      - default
-    ports:
-      - "6379:6379"
+networks:
+  backend:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: ${SUBNET}
