--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,48 @@
 version: "3.8"
 services:
+
+  ######## nginx ########
+  nginx:
+    build:
+      context: ./nginx
+      args:
+        - VERSION=${REDIS_VERSION}
+        - ZP_MAINTAINER=${ZP_MAINTAINER}
+    container_name: nginx
+    privileged: true
+    ports:
+      - ${NGINX_HOST_HTTP_PORT}:80
+      - ${NGINX_HOST_HTTPS_PORT}:443
+    restart: always
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ${WEB_ROOT_PATH}:/var/www/
+      - ${NGINX_LOG_PATH}:/var/log/nginx/
+    networks:
+      backend:
+        ipv4_address: ${NGINX_IP}
+
+  ######## redis ########
+  redis:
+    build:
+      context: ./redis
+      args:
+        - VERSION=${REDIS_VERSION}
+        - ZP_MAINTAINER=${ZP_MAINTAINER}
+    container_name: redis
+    command: redis-server /etc/redis/redis.conf
+    restart: always
+    ports:
+      - ${REDIS_PORT}:6379
+    volumes:
+      - ${REDIS_DATA_PATH}:/data
+      - ${REDIS_CONF_PATH}:/etc/redis/redis.conf
+    networks:
+      backend:
+        ipv4_address: ${REDIS_IP}
+
+  ######## frps ########
   frps:
     build:
       context: ./frp/frps/${FRPS_ARCH}
@@ -15,6 +58,7 @@ services:
       backend:
         ipv4_address: ${FRPS_IP}
 
+  ######## frpc ########
   frpc:
     build:
       context: ./frp/frpc/${FRPC_ARCH}
