--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,32 @@ services:
       backend:
         ipv4_address: ${REDIS_IP}
 
+  ######## mysql ########
+  mysql:
+    build:
+      context: ./mysql
+      args:
+        - VERSION=${MYSQL_VERSION}
+        - ZP_MAINTAINER=${ZP_MAINTAINER}
+    container_name: mysql
+    # M1 需要指定 platform
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - TZ=${MYSQL_TIMEZONE}
+    volumes:
+      # mysql默认配置文件
+      - ${MYSQL_CONF_PATH}:/etc/mysql/conf.d/docker.cnf
+      # 数据文件
+      - ${MYSQL_DATA_PATH}:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    privileged: true
+    ports:
+      - ${MYSQL_PORT}:3306
+    networks:
+      backend:
+        ipv4_address: ${MYSQL_IP}
+
   ######## frps ########
   frps:
     build:
