fix(sources.list): debian

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ NGINX_HOST_HTTP_PORT=80
 NGINX_HOST_HTTPS_PORT=443
 NGINX_LOG_PATH=./logs/nginx/
 
-### MYSQL 5.7 | 8.0 ###########################
+### MYSQL 5.7.40 | 8.0 ########################
 MYSQL_VERSION=5.7.40
 MYSQL_DATA_PATH=./data/mysql
 MYSQL_CONF_PATH=./mysql/docker.cnf
@@ -41,37 +41,29 @@ FRPC_ARCH=arm64v8
 FRPC_INI_PATH=./frp/frpc/frpc.ini
 
 ### IPV4_ADDRESS ##############################
-SUBNET=172.19.0.0/16
-
+SUBNET=172.18.0.0/16
 # nginx
-NGINX_IP=172.19.0.2
-
+NGINX_IP=172.18.0.2
 # mysql
-MYSQL_IP=172.19.0.3
-
+MYSQL_IP=172.18.0.3
 # redis
-REDIS_IP=172.19.0.4
-
+REDIS_IP=172.18.0.4
 # elasticsearch
-ELASTICSEARCH_IP=172.19.0.5
-
+ELASTICSEARCH_IP=172.18.0.5
 # kibana
-KIBANA_IP=172.19.0.6
-
+KIBANA_IP=172.18.0.6
 # es group
-ES01_IP=172.19.0.7
-ES02_IP=172.19.0.8
-ES03_IP=172.19.0.9
-
+ES01_IP=172.18.0.7
+ES02_IP=172.18.0.8
+ES03_IP=172.18.0.9
 # php
-PHP56_IP=172.19.0.56
-PHP71_IP=172.19.0.71
-PHP72_IP=172.19.0.72
-PHP73_IP=172.19.0.73
-PHP74_IP=172.19.0.74
-PHP80_IP=172.19.0.80
-PHP81_IP=172.19.0.81
-
+PHP56_IP=172.18.0.56
+PHP71_IP=172.18.0.71
+PHP72_IP=172.18.0.72
+PHP73_IP=172.18.0.73
+PHP74_IP=172.18.0.74
+PHP80_IP=172.18.0.80
+PHP81_IP=172.18.0.81
 # frp
-FRPS_IP=172.19.0.100
-FRPC_IP=172.19.0.100
+FRPS_IP=172.18.0.100
+FRPC_IP=172.18.0.100
