--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,7 @@ ELASTICSEARCH_PASSWORD=123456
 
 ### frp 0.47.0 ########################
 FRP_VERSION=0.47.0
+FRP_LOG_PATH=./logs/frps/frps.log
 # frps 架构: amd64|arm32v6|arm32v7|arm64v8|i386
 FRPS_ARCH=arm64v8
 # frps 配置文件
