fix(frpd): fix... add nginx-proxy-conf

--- a/.env.example
+++ b/.env.example
@@ -29,17 +29,22 @@ KIBANA_PORT=5601
 ELASTICSEARCH_USERNAME=elastic
 ELASTICSEARCH_PASSWORD=123456
 
-### frp 0.47.0 ########################
+### frpd 0.47.0 ########################
 FRP_VERSION=0.47.0
-FRP_LOG_PATH=./logs/frps/frps.log
+
 # frps 架构: amd64|arm32v6|arm32v7|arm64v8|i386
-FRPS_ARCH=arm64v8
+FRPS_ARCH=amd64
 # frps 配置文件
 FRPS_INI_PATH=./frp/frps/frps.ini
+# frps log
+FRPS_LOG_PATH=./logs/frps/frps.log
+
 # frpc 架构: amd64|arm32v6|arm32v7|arm64v8|i386
-FRPC_ARCH=arm64v8
+FRPC_ARCH=amd64
 # frpc 配置文件
 FRPC_INI_PATH=./frp/frpc/frpc.ini
+# frpc log
+FRPC_LOG_PATH=./logs/frpc/frpc.log
 
 ### IPV4_ADDRESS ##############################
 SUBNET=172.18.0.0/16
