--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ NGINX_LOG_PATH=./logs/nginx/
 MYSQL_VERSION=5.7.40
 MYSQL_DATA_PATH=./data/mysql
 MYSQL_CONF_PATH=./mysql/docker.cnf
-MYSQL_PORT=3306
+MYSQL_PORT=13306
 MYSQL_TIMEZONE=Asia/Shanghai
 MYSQL_ROOT_PASSWORD=123456
 
@@ -46,6 +46,10 @@ FRPC_INI_PATH=./frp/frpc/frpc.ini
 # frpc log
 FRPC_LOG_PATH=./logs/frpc/frpc.log
 
+# WordPress
+WP_ROOT_PATH1=../wordpress1
+WP_ROOT_PATH2=../wordpress2
+
 ### IPV4_ADDRESS ##############################
 SUBNET=172.18.0.0/16
 # nginx
@@ -70,6 +74,9 @@ PHP73_IP=172.18.0.73
 PHP74_IP=172.18.0.74
 PHP80_IP=172.18.0.80
 PHP81_IP=172.18.0.81
+# wordpress
+WP_IP1=172.18.0.91
+WP_IP2=172.18.0.92
 # frp
 FRPS_IP=172.18.0.100
 FRPC_IP=172.18.0.100
