--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,6 +119,8 @@ services:
     image: wordpress
     privileged: true
     restart: always
+    depends_on:
+      - mysql    
     links:
       - mysql
     ports:
@@ -134,6 +136,8 @@ services:
     image: wordpress
     privileged: true
     restart: always
+    depends_on:
+      - mysql
     links:
       - mysql
     ports:
