--- a/.env.example
+++ b/.env.example
@@ -80,3 +80,7 @@ WP_IP2=172.18.0.92
 # frp
 FRPS_IP=172.18.0.100
 FRPC_IP=172.18.0.100
+# gogs - mysql
+FRPS_IP=172.18.0.101
+# gogs
+FRPS_IP=172.18.0.102
