Add(golang): Add golang.

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,11 @@ FRPC_LOG_PATH=./logs/frpc/frpc.log
 WP_ROOT_PATH1=../wordpress1
 WP_ROOT_PATH2=../wordpress2
 
+### GO 1.20 ########################
+GO_VERSION=1.20
+GO_TIMEZONE=Asia/Shanghai
+GO_APPPATH=../goapp
+
 ### IPV4_ADDRESS ##############################
 SUBNET=172.18.0.0/16
 # nginx
@@ -82,5 +87,9 @@ FRPS_IP=172.18.0.100
 FRPC_IP=172.18.0.100
 # gogs - mysql
 FRPS_IP=172.18.0.101
-# gogs
+# gogs - app
 FRPS_IP=172.18.0.102
+# go -app
+GOAPP_IP10=172.18.0.110
+GOAPP_IP11=172.18.0.111
+GOAPP_IP12=172.18.0.112
