--- a/frp/frpc/arm32v7/Dockerfile
+++ b/frp/frpc/arm32v7/Dockerfile
@@ -1,7 +1,7 @@
 ARG FRP_VERSION
 ARG ZP_MAINTAINER
 
-FROM arm32v7/alpine:3.15
+FROM arm32v7/alpine:3.20
 
 ARG FRP_VERSION
 ARG ZP_MAINTAINER
@@ -14,7 +14,7 @@ RUN cd /root \
     &&  cd frp_${FRP_VERSION}_linux_arm/ \
     &&  cp frpc /usr/bin/ \
     &&  mkdir -p /etc/frp \
-    &&  cp frpc.ini /etc/frp \
+    #&&  cp frpc.ini /etc/frp \
     &&  cd /root \
     &&  rm frp_${FRP_VERSION}_linux_arm.tar.gz \
     &&  rm -rf frp_${FRP_VERSION}_linux_arm/
