--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
     listen          80;
-    server_name     localhost 127.0.0.1;
+    server_name    www.domain.com domain.com localhost 127.0.0.1;
 
     charset utf-8;
     default_type text/html;
