--- a/.env.example
+++ b/.env.example
@@ -29,11 +29,11 @@ KIBANA_PORT=5601
 ELASTICSEARCH_USERNAME=elastic
 ELASTICSEARCH_PASSWORD=123456
 
-### frpd 0.47.0 ########################
-FRP_VERSION=0.47.0
+### frpd 0.58.1 ########################
+FRP_VERSION=0.58.1
 
 # frps 架构: amd64|arm32v6|arm32v7|arm64v8|i386
-FRPS_ARCH=amd64
+FRPS_ARCH=arm64v8
 # frps 配置文件
 FRPS_INI_PATH=./frp/frps/frps.ini
 # frps log
