--- a/nginx/conf.d/frps.conf.example
+++ b/nginx/conf.d/frps.conf.example
@@ -1,9 +1,9 @@
 # http
 server {
     listen 80;
-    server_name frp.localhost.com;
+    server_name foo.<domain>.com;
     location / {
-        proxy_pass frps:80;
+        proxy_pass http://frps:80;
         proxy_redirect off;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -14,7 +14,7 @@ server {
 # # https
 # server {
 #     listen 443;
-#     server_name frp.localhost.com;
+#     server_name foo.<domain>.com;
 #     location / {
 #         ssl_preread on;
 #         proxy_pass frps:443;
@@ -28,7 +28,7 @@ server {
 # # tcp 3505 ~ 3510
 # server {
 #     listen 3505;
-#     server_name frp.localhost.com;
+#     server_name foo.<domain>.com;
 #     location / {
 #         proxy_pass frps:3505;
 #         proxy_redirect off;
