--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
     build:
       context: ./nginx
       args:
-        - VERSION=${REDIS_VERSION}
         - ZP_MAINTAINER=${ZP_MAINTAINER}
     container_name: nginx
     privileged: true
@@ -17,6 +16,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/ssl:/etc/nginx/ssl
       - ${WEB_ROOT_PATH}:/var/www/
       - ${NGINX_LOG_PATH}:/var/log/nginx/
     networks:
