fix: frp conf to toml, wp conf, compose KEY

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,24 @@
-WEB_ROOT_PATH=../www
 
+TAG=1.0.1
 ZP_MAINTAINER=zhaopan <zhaopan@github.com>
+
+### SERVICES ##################################
+AUTHOR=zhaopan
+NGINX_NAME=nginx
+REDIS_NAME=redis
+MYSQL_NAME=mysql
+FRPS_NAME=frps
+FRPC_NAME=frpc
+WP_NAME=wp
+WPCLI_NAME=wpcli
+GOAPP110_NAME=goapp110
+GOAPP111_NAME=goapp111
+GOAPP112_NAME=goapp112
 
 ### NGINX #####################################
 NGINX_HOST_HTTP_PORT=80
 NGINX_HOST_HTTPS_PORT=443
+NGINX_ROOT_PATH=../www
 NGINX_LOG_PATH=./logs/nginx/
 
 ### MYSQL 5.7.40 | 8.0 ########################
@@ -19,7 +33,7 @@ MYSQL_ROOT_PASSWORD=123456
 REDIS_VERSION=5.0
 REDIS_DATA_PATH=./data/redis5
 REDIS_CONF_PATH=./redis/redis5.conf
-REDIS_PORT=6379
+REDIS_PORT=16379
 
 ### ElasticSearch 7.17 ########################
 ELASTICSEARCH_PATH=./data/elasticsearch/
@@ -33,22 +47,26 @@ ELASTICSEARCH_PASSWORD=123456
 FRP_VERSION=0.58.1
 
 # frps 架构: amd64|arm32v6|arm32v7|arm64v8|i386
-FRPS_ARCH=arm64v8
+FRPS_ARCH=amd64
 # frps 配置文件
-FRPS_INI_PATH=./frp/frps/frps.ini
+FRPS_INI_PATH=./frp/frps/frps.toml
 # frps log
 FRPS_LOG_PATH=./logs/frps/frps.log
 
 # frpc 架构: amd64|arm32v6|arm32v7|arm64v8|i386
 FRPC_ARCH=amd64
 # frpc 配置文件
-FRPC_INI_PATH=./frp/frpc/frpc.ini
+FRPC_INI_PATH=./frp/frpc/frpc.toml
 # frpc log
 FRPC_LOG_PATH=./logs/frpc/frpc.log
 
 # WordPress
-WP_ROOT_PATH1=../wordpress1
-WP_ROOT_PATH2=../wordpress2
+WP_VERSION=latest
+WP_ROOT_PATH=../wordpress
+WP_CONF_PATH=./wordpress/config/wp_php.ini
+WP_PORT=8081
+WP_DB_NAME=wordpress
+WP_DB_ROOT_PASSWORD=123456
 
 ### GO 1.20 ########################
 GO_VERSION=1.20
@@ -80,16 +98,16 @@ PHP74_IP=172.18.0.74
 PHP80_IP=172.18.0.80
 PHP81_IP=172.18.0.81
 # wordpress
-WP_IP1=172.18.0.91
-WP_IP2=172.18.0.92
+WP_IP=172.18.0.91
+WP_CLI_IP=172.18.0.92
 # frp
 FRPS_IP=172.18.0.100
 FRPC_IP=172.18.0.100
-# gogs - mysql
+# gogs-mysql
 FRPS_IP=172.18.0.101
-# gogs - app
+# gogs-app
 FRPS_IP=172.18.0.102
-# go -app
+# go-app
 GOAPP_IP10=172.18.0.110
 GOAPP_IP11=172.18.0.111
 GOAPP_IP12=172.18.0.112
