--- a/frp/frpc/arm32v7/Dockerfile
+++ b/frp/frpc/arm32v7/Dockerfile
@@ -14,9 +14,9 @@ RUN cd /root \
     &&  cd frp_${FRP_VERSION}_linux_arm/ \
     &&  cp frpc /usr/bin/ \
     &&  mkdir -p /etc/frp \
-    #&&  cp frpc.ini /etc/frp \
+    #&&  cp frpc.toml /etc/frp \
     &&  cd /root \
     &&  rm frp_${FRP_VERSION}_linux_arm.tar.gz \
     &&  rm -rf frp_${FRP_VERSION}_linux_arm/
 
-ENTRYPOINT /usr/bin/frpc -c /etc/frp/frpc.ini
+ENTRYPOINT /usr/bin/frpc -c /etc/frp/frpc.toml
