--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,16 @@ GO_VERSION=1.20
 GO_TIMEZONE=Asia/Shanghai
 GO_APPPATH=../goapp
 
+### mongodb ########################
+MONGO_VER=3.4
+MONGO_NAME=mongodb_server
+MONGO_PORT=27017
+MONGO_PATH=./mongo/data/db
+MONGO_USERNAME=root
+MONGO_PASSWORD=123456
+MONGO_CONF_PATH=./mongo/mongod.conf
+MONGO_TIMEZONE=Asia/Shanghai
+
 ### IPV4_ADDRESS ##############################
 SUBNET=172.18.0.0/16
 # nginx
@@ -111,3 +121,5 @@ FRPS_IP=172.18.0.102
 GOAPP_IP10=172.18.0.110
 GOAPP_IP11=172.18.0.111
 GOAPP_IP12=172.18.0.112
+# mongodb
+MONGO_IP=172.18.0.120
