--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 
-TAG=1.0.1
-ZP_MAINTAINER=zhaopan <zhaopan@github.com>
+TAG=1.1.1
 
 ### SERVICES ##################################
 AUTHOR=zhaopan
@@ -14,6 +13,8 @@ WPCLI_NAME=wpcli
 GOAPP110_NAME=goapp110
 GOAPP111_NAME=goapp111
 GOAPP112_NAME=goapp112
+MONGO_NAME=mongo
+GOGS_NAME=gogs
 
 ### NGINX #####################################
 NGINX_HOST_HTTP_PORT=80
@@ -74,14 +75,19 @@ GO_TIMEZONE=Asia/Shanghai
 GO_APPPATH=../goapp
 
 ### mongodb ########################
-MONGO_VER=3.4
-MONGO_NAME=mongodb_server
+MONGO_VERSION=3.4
 MONGO_PORT=27017
 MONGO_PATH=./mongo/data/db
 MONGO_USERNAME=root
 MONGO_PASSWORD=123456
 MONGO_CONF_PATH=./mongo/mongod.conf
 MONGO_TIMEZONE=Asia/Shanghai
+
+### gogs ########################
+GOGS_VERSION=0.13
+GOGS_SSH_PORT=10022
+GOGS_WEB_PORT=10880
+GOGS_DATA_PATH=./data/gogs/
 
 ### IPV4_ADDRESS ##############################
 SUBNET=172.18.0.0/16
@@ -123,3 +129,5 @@ GOAPP_IP11=172.18.0.111
 GOAPP_IP12=172.18.0.112
 # mongodb
 MONGO_IP=172.18.0.120
+# gogs
+GOGS_IP=172.18.0.121
