--- a/gogs/Dockerfile
+++ b/gogs/Dockerfile
@@ -1,10 +1,11 @@
-ARG MONGO_VERSION=latest
+ARG GOGS_VERSION=latest
 
-FROM mongo:${MONGO_VERSION}
+FROM gogs/gogs:${GOGS_VERSION}
 
 # 复制时区配置
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
     && echo $TZ > /etc/timezone
 
-EXPOSE 27017
+EXPOSE 22
+EXPOSE 3000
