--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,15 +1,11 @@
-ARG VERSION
-ARG ZP_MAINTAINER
+ARG VERSION=latest
 
 FROM mysql/mysql-server:${VERSION}
 
-ARG ZP_MAINTAINER
-
-LABEL maintainer=${ZP_MAINTAINER}
-
 # 复制时区配置
 ENV TZ=Asia/Shanghai
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
+    && echo $TZ > /etc/timezone
 
 CMD ["chmod -R 644 /etc/mysql/conf.d/docker.cnf"]
 
