--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
+#/etc/hosts
+x-hosts: &hosts
+  extra_hosts:
+    - default.dev.com:${NGINX_IP}
+
 services:
 
   ######## nginx ########
   nginx:
     build:
       context: ./nginx
-    image: ${AUTHOR}/${NGINX_NAME}:${TAG}
+      args:
+        - NGINX_VERSION=${NGINX_VERSION}
+    image: ${AUTHOR}/${NGINX_NAME}:${NGINX_VERSION}
     container_name: ${NGINX_NAME}
     restart: always
     privileged: true
@@ -27,7 +34,7 @@ services:
       context: ./redis
       args:
         - REDIS_VER=${REDIS_VERSION}
-    image: ${AUTHOR}/${REDIS_NAME}:${TAG}
+    image: ${AUTHOR}/${REDIS_NAME}:${REDIS_VERSION}
     container_name: ${REDIS_NAME}
     restart: always
     privileged: true
@@ -45,8 +52,8 @@ services:
     build:
       context: ./mysql
       args:
-        - VERSION=${MYSQL_VERSION}
-    image: ${AUTHOR}/${MYSQL_NAME}:${TAG}
+        - MYSQL_VERSION=${MYSQL_VERSION}
+    image: ${AUTHOR}/${MYSQL_NAME}:${MYSQL_VERSION}
     container_name: ${MYSQL_NAME}
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
@@ -70,7 +77,7 @@ services:
       context: ./mongo
       args:
         - MONGO_VERSION=${MONGO_VERSION}
-    image: ${AUTHOR}/${MONGO_NAME}:${TAG}
+    image: ${AUTHOR}/${MONGO_NAME}:${MONGO_VERSION}
     container_name: ${MONGO_NAME}
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
@@ -96,7 +103,7 @@ services:
       context: ./frp/frps/${FRPS_ARCH}
       args:
         - FRP_VERSION=${FRP_VERSION}
-    image: ${AUTHOR}/${FRPS_NAME}:${TAG}
+    image: ${AUTHOR}/${FRPS_NAME}:${FRP_VERSION}
     container_name: ${FRPS_NAME}
     restart: always
     privileged: true
@@ -125,7 +132,7 @@ services:
       context: ./frp/frpc/${FRPC_ARCH}
       args:
         - FRP_VERSION=${FRP_VERSION}
-    image: ${AUTHOR}/${FRPC_NAME}:${TAG}
+    image: ${AUTHOR}/${FRPC_NAME}:${FRP_VERSION}
     container_name: ${FRPC_NAME}
     restart: always
     privileged: true
@@ -181,47 +188,23 @@ services:
       backend:
         ipv4_address: ${WP_CLI_IP}
 
-  ######## goapp110 ########
-  goapp110:
+  ######## goapp ########
+  goapp:
     build:
       context: ./golang
       args:
-        - VERSION=${GO_VERSION}
-    container_name: ${GOAPP110_NAME}
+        - GO_VERSION=${GO_VERSION}
+    image: ${AUTHOR}/${GOAPP_NAME}:${GO_VERSION}
+    container_name: ${GOAPP_NAME}
     restart: always
     privileged: true
     ports:
-      - '8000:80'
+      - '${GO_WEB_PORT}:80'
     volumes:
       - ${GO_APPPATH}:/var/www/goapp/
-    environment:
-      - TZ=${GO_TIMEZONE}
     networks:
       backend:
-        ipv4_address: ${GOAPP_IP10}
-
-  ######## goapp111 ########
-  goapp111:
-    build:
-      context: ./golang
-      args:
-        - VERSION=${GO_VERSION}
-    container_name: ${GOAPP111_NAME}
-    restart: always
-    privileged: true
-    ports:
-      - '8000:80'
-    depends_on:
-      - mysql
-    links:
-      - mysql
-    volumes:
-      - ${GO_APPPATH}:/var/www/goapp/
-    environment:
-      - TZ=${GO_TIMEZONE}
-    networks:
-      backend:
-        ipv4_address: ${GOAPP_IP11}
+        ipv4_address: ${GOAPP_IP}
 
   ######## gogs ########
   gogs:
@@ -229,7 +212,7 @@ services:
       context: ./gogs
       args:
         - GOGS_VERSION=${GOGS_VERSION}
-    image: ${AUTHOR}/${GOGS_NAME}:${TAG}
+    image: ${AUTHOR}/${GOGS_NAME}:${GOGS_VERSION}
     container_name: ${GOGS_NAME}
     restart: always
     privileged: true
@@ -250,9 +233,4 @@ services:
 
 networks:
   backend:
-    name: devops-proxy-backend
-    driver: bridge
     external: true
-    ipam:
-      config:
-        - subnet: ${SUBNET}
