--- a/.env.example
+++ b/.env.example
@@ -10,13 +10,12 @@ FRPS_NAME=frps
 FRPC_NAME=frpc
 WP_NAME=wp
 WPCLI_NAME=wpcli
-GOAPP110_NAME=goapp110
-GOAPP111_NAME=goapp111
-GOAPP112_NAME=goapp112
+GOAPP_NAME=goapp
 MONGO_NAME=mongo
 GOGS_NAME=gogs
 
 ### NGINX #####################################
+NGINX_VERSION=1.14
 NGINX_HOST_HTTP_PORT=80
 NGINX_HOST_HTTPS_PORT=443
 NGINX_ROOT_PATH=../www
@@ -44,21 +43,15 @@ KIBANA_PORT=5601
 ELASTICSEARCH_USERNAME=elastic
 ELASTICSEARCH_PASSWORD=123456
 
-### frpd 0.58.1 ########################
-FRP_VERSION=0.58.1
-
+### frpd 0.61.2 ########################
+FRP_VERSION=0.61.2
 # frps 架构: amd64|arm32v6|arm32v7|arm64v8|i386
 FRPS_ARCH=amd64
-# frps 配置文件
 FRPS_INI_PATH=./frp/frps/frps.toml
-# frps log
 FRPS_LOG_PATH=./logs/frps/frps.log
-
 # frpc 架构: amd64|arm32v6|arm32v7|arm64v8|i386
 FRPC_ARCH=amd64
-# frpc 配置文件
 FRPC_INI_PATH=./frp/frpc/frpc.toml
-# frpc log
 FRPC_LOG_PATH=./logs/frpc/frpc.log
 
 # WordPress
@@ -71,8 +64,8 @@ WP_DB_ROOT_PASSWORD=123456
 
 ### GO 1.20 ########################
 GO_VERSION=1.20
-GO_TIMEZONE=Asia/Shanghai
 GO_APPPATH=../goapp
+GO_WEB_PORT=8000
 
 ### mongodb ########################
 MONGO_VERSION=3.4
@@ -84,28 +77,21 @@ MONGO_CONF_PATH=./mongo/mongod.conf
 MONGO_TIMEZONE=Asia/Shanghai
 
 ### gogs ########################
-GOGS_VERSION=0.13
+GOGS_VERSION=0.13.0
 GOGS_SSH_PORT=10022
 GOGS_WEB_PORT=10880
 GOGS_DATA_PATH=./data/gogs/
 
 ### IPV4_ADDRESS ##############################
 SUBNET=172.18.0.0/16
-# nginx
 NGINX_IP=172.18.0.2
-# mysql
 MYSQL_IP=172.18.0.3
-# redis
 REDIS_IP=172.18.0.4
-# elasticsearch
 ELASTICSEARCH_IP=172.18.0.5
-# kibana
 KIBANA_IP=172.18.0.6
-# es group
 ES01_IP=172.18.0.7
 ES02_IP=172.18.0.8
 ES03_IP=172.18.0.9
-# php
 PHP56_IP=172.18.0.56
 PHP71_IP=172.18.0.71
 PHP72_IP=172.18.0.72
@@ -113,21 +99,10 @@ PHP73_IP=172.18.0.73
 PHP74_IP=172.18.0.74
 PHP80_IP=172.18.0.80
 PHP81_IP=172.18.0.81
-# wordpress
 WP_IP=172.18.0.91
 WP_CLI_IP=172.18.0.92
-# frp
 FRPS_IP=172.18.0.100
 FRPC_IP=172.18.0.100
-# gogs-mysql
-FRPS_IP=172.18.0.101
-# gogs-app
-FRPS_IP=172.18.0.102
-# go-app
-GOAPP_IP10=172.18.0.110
-GOAPP_IP11=172.18.0.111
-GOAPP_IP12=172.18.0.112
-# mongodb
+GOAPP_IP=172.18.0.110
 MONGO_IP=172.18.0.120
-# gogs
 GOGS_IP=172.18.0.121
