--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-
 TAG=1.1.1
 
 ### SERVICES ##################################
@@ -79,8 +78,11 @@ MONGO_TIMEZONE=Asia/Shanghai
 ### gogs ########################
 GOGS_VERSION=0.13.0
 GOGS_SSH_PORT=10022
-GOGS_WEB_PORT=10880
+GOGS_WEB_PORT=10881
 GOGS_DATA_PATH=./data/gogs/
+
+### ZENTAO ########################
+ZENTAO_DATA_PATH=./data/zentao
 
 ### IPV4_ADDRESS ##############################
 SUBNET=172.18.0.0/16
@@ -106,3 +108,4 @@ FRPC_IP=172.18.0.100
 GOAPP_IP=172.18.0.110
 MONGO_IP=172.18.0.120
 GOGS_IP=172.18.0.121
+ZENTAO_IP=172.18.0.122
