--- a/.env.example
+++ b/.env.example
@@ -82,6 +82,8 @@ GOGS_WEB_PORT=10881
 GOGS_DATA_PATH=./data/gogs/
 
 ### ZENTAO ########################
+ZENTAO_VERSION=21.6
+ZENTAO_PORT=10880
 ZENTAO_DATA_PATH=./data/zentao
 
 ### IPV4_ADDRESS ##############################
@@ -109,3 +111,5 @@ GOAPP_IP=172.18.0.110
 MONGO_IP=172.18.0.120
 GOGS_IP=172.18.0.121
 ZENTAO_IP=172.18.0.122
+RABBITMQ_IP=172.18.0.123
+NACOS_IP=172.18.0.124
